<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <!-- REALISED BY PART -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/cuivre"
                android:text="@string/realised_by"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_poster_card"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    app:cardCornerRadius="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@mipmap/ic_profile" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="64dp"
                    android:text="@string/creator"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <!-- GITHUB lINK OF THE PROJECT -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/cuivre"
                android:text="@string/link_github_of_project"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/liengithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/link_github"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Librairies -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/cuivre"
                android:text="@string/librairies"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/librairies1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Retrofit"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/librairies2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SQLiteDataBase"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- Parameters -->
            <TextView
                android:id="@+id/parameters_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/cuivre"
                android:text="@string/parameters"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="48dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_nigthDay"
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_night" />

                <TextView
                    android:id="@+id/NightDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="64dp"
                    android:text="@string/NightAndDay"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/btg_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:singleSelection="true"
                app:selectionRequired="true" >

                <Button
                    android:id="@+id/btnDefault"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Default" />

                <Button
                    android:id="@+id/btnDark"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dark" />

                <Button
                    android:id="@+id/btnLight"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Light" />

            </com.google.android.material.button.MaterialButtonToggleGroup>



        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>
